--- a/home.html
+++ b/home.html
@@ -31,11 +31,11 @@
     <div class="Book">
             <h1>أكثر الكتب قراءة</h1>
         <div Books>
-            <img class="book1" src="images/book1.png" alt="">
-            <img class="book2" src="images/book2.jpg" alt="">
-            <img class="book3" src="images/book3.jpg" alt="">
-            <img class="book4" src="images/book4.jpg" alt="">
-            <img class="book5" src="images/book5.jpg" alt="">
+            <img class="book1" src="book1.png" alt="">
+            <img class="book2" src="book2.jpg" alt="">
+            <img class="book3" src="book3.jpg" alt="">
+            <img class="book4" src="book4.jpg" alt="">
+            <img class="book5" src="book5.jpg" alt="">
         </div>
 </body>
 </html>
